# datasetctl

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs
src/dataset/: link.rs  mod.rs  processed.rs  raw.rs
